# ross-dynamic-perceptron

./: .out.out.swp  CMakeLists.txt  CMakeLists.txt.var  Makefile  README.md  compile_script.sh  dynPer.c  dynPer.h  edge_input.793  edge_input.original  exe_dynPer.sh  generate_graph.c  generate_graph.h  generate_stimulus.h  igraph_test_erdos_renyi_game.c  mod_net_exe_dynPer.sh  network_parameters.h  out.out  stim_input.74.5  vertex_input  vertex_input.793
